# cookiecutter_pypackage

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: Makefile  README.md  pyproject.toml  setup.cfg
