[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.version}}"
description = ""
authors = ["{{cookiecutter.name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^3.9.2"
mypy = "^0.971"
isort = "^5.10.1"
pytest = "^7.1.3"

[tool.isort]
profile = "black"
